2004-02-17 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* doc/sdccman.lyx: added details about the HC08 storage classes and
	interrupts, fixed the register usage info for z80 & gbz80

2004-02-17 Vangelis Rokas <vrokas AT otenet.gr>

	* doc/sdccman.lyx: added more pic16 port documentation
	* device/include/pic16/: added header pic18fregs.h

2004-02-16 Bernhard Held <bernhard AT bernhardheld.de>

	* doc/sdccman.lyx: added Vangelis' contribution

2004-02-16 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/SDCClrange.c (rlivePoint): live range of SEND operand should
	extend to the next CALL or PCALL, not just to the next CALL.

2004-02-16 Vangelis Rokas <vrokas AT otenet.gr>

	* src/pic16/gen.c (genInline): fixed bug #896482 with inline assembly

2004-02-15 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/mcs51/ralloc.c (packRegsForAssign, reassignAliasedSym): fixed
	bug #895752 and a better fix for bug #716790

2004-02-15 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/SDCCsymt.c (processFuncArgs): fixed bug #896796

2004-02-14 Frieder Ferlemann <Frieder.Ferlemann AT web.de>

	* doc/sdccman.lyx: minor changes, minor changed

2004-02-13 Bernhard Held <bernhard AT bernhardheld.de>

	* src/SDCCicode.c (usualBinaryConversions): removed pic16 from ports
	which can't handle SDCC_NEWONEBYTEOPS,
	(geniCodeMultiply): removed conversion from mult to shift for pic14
	and pic16

2004-02-12 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/hc08/gen.h,
	* src/hc08/gen.c (storeRegToAop, aopOp, aopAdrStr, accopWithAop,
	rmwWithAop): Ported my 2003-10-02 fix for bug #663539 to the hc08,
	thus fixing bug #895406

2004-02-11 Bernhard Held <bernhard AT bernhardheld.de>

	* device/lib/_modsint.c,
	* device/lib/_modslong.c: sign follows divisor only
	* src/hc08/gen.c (genMultOneByte): if result size is 1,
	signs or signedness can be ignored
	* src/SDCCast.c (addCast): cosmetic - added lineno to CAST